--- a/about.html
+++ b/about.html
@@ -31,68 +31,37 @@
             <div class="left-menu-button-wrap">
                 <ul>
                     <li class="left-menu-button-top">ABOUT</li>
-                    <li class="left-menu-button"><a href="#">2020</a></li>
-                    <li class="left-menu-button"><a href="#">2021</a></li>
-                    <li class="left-menu-button"><a href="#">2022</a></li>
-                    <li class="left-menu-button"><a href="#">2023</a></li>
+                    <li class="left-menu-button"><a href="#">소개</a></li>
+                    <li class="left-menu-button"><a href="#">하고 싶은 일</a></li>
+                    <li class="left-menu-button"><a href="#">할 수 있는 일</a></li>
+                    <li class="left-menu-button"><a href="#">하는 일</a></li>
                 </ul>
             </div>
         </div>
 
         <div class="article-wrap">
             <div class="article">
-                <h1>첫번째 게시글입니다</h1>
+                <h1>소개</h1>
                 <hr>
-                <img src="src\images\art01.png" alt="작품1" >
-                <p>안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우</p>
+                <img src="src\images\pengha.png" alt="작품1" >
+                <p>안녕하십니까 펭숩니다요. 남극에서 한국까지 온 펭귄입니다아~</p>
             </div>
-
             <div class="article">
-                <h1>두번째 게시글입니다</h1>
+                <h1>하고 싶은 일</h1>
                 <hr>
-                <p>안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
+                <p>놀고 싶습니다. 적극적으로 놀고 싶습니다.
                 </p>
             </div>
             <div class="article">
-                <h1>두번째 게시글입니다</h1>
+                <h1>할 수 있는 일</h1>
                 <hr>
-                <p>안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
+                <p>놀 수 있습니다. 항상 짜릿해. 늘 새로워.
                 </p>
             </div>
             <div class="article">
-                <h1>두번째 게시글입니다</h1>
+                <h1>하는 일</h1>
                 <hr>
-                <p>안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                </p>
-            </div>
-            <div class="article">
-                <h1>두번째 게시글입니다</h1>
-                <hr>
-                <p>안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
+                <p>놀고 있습니다. 이왕 놀거 잘 놀고 있습니다.
                 </p>
             </div>
         </div>
