--- a/philosophy.html
+++ b/philosophy.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tony's DevLog</title>
+    <title>AWESOME WEB</title>
 
     <link rel="stylesheet" href="style.css">
 
@@ -26,22 +26,77 @@
 
         </div>
     </div>
-    
-    <div class="left-menu">
-        <div class="left-menu-button-wrap">
-            <ul>
-                <li class="left-menu-button"><a href="#">2020</a></li>
-                <li class="left-menu-button"><a href="#">2021</a></li>
-                <li class="left-menu-button"><a href="#">2022</a></li>
-                <li class="left-menu-button"><a href="#">2023</a></li>
-            </ul>
+    <div class="content-wrap">
+        <div class="left-menu">
+            <div class="left-menu-button-wrap">
+                <ul>
+                    <li class="left-menu-button-top" style="font-size: 25px;">PHILOSOPHY</li>
+                    <li class="left-menu-button"><a href="#"></a></li>
+                    <li class="left-menu-button"><a href="#"></a></li>
+                    <li class="left-menu-button"><a href="#"></a></li>
+                    <li class="left-menu-button"><a href="#"></a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="article-wrap">
+            <div class="article">
+                <h1>철학이란 무엇인가?</h1>
+                <hr>
+                <img src="src\images\art01.png" alt="작품1" >
+                <p>안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우</p>
+            </div>
+
+            <div class="article">
+                <h1>몰라요</h1>
+                <hr>
+                <p>안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
+                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
+                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
+                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
+                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
+                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
+                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
+                </p>
+            </div>
+            <div class="article">
+                <h1>정말 몰라요</h1>
+                <hr>
+                <p>안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
+                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
+                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
+                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
+                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
+                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
+                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
+                </p>
+            </div>
+            <div class="article">
+                <h1>아주 몰라요</h1>
+                <hr>
+                <p>안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
+                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
+                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
+                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
+                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
+                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
+                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
+                </p>
+            </div>
+            <div class="article">
+                <h1>몰라몰라용</h1>
+                <hr>
+                <p>안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
+                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
+                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
+                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
+                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
+                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
+                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
+                </p>
+            </div>
         </div>
     </div>
-
-    <div class="article">
-
-    </div>
-
 
 </body>
 <script src="script.js"></script>
