--- a/art.html
+++ b/art.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AWESOME WEB</title>
+    <title>AWESOME WEB - ART</title>
 
     <link rel="stylesheet" href="style.css">
 
@@ -64,6 +64,7 @@
             <div class="article">
                 <h1>VIDEO</h1>
                 <hr>
+                <video controls preload="metadata"><source src="src\videos\Dschinghis Khan - Moskau (Live 1979).mp4"></video>
                 <p>안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
                     안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
                     안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
