--- a/philosophy.html
+++ b/philosophy.html
@@ -6,7 +6,10 @@
     <title>AWESOME WEB - PHILOSOPHY</title>
 
     <link rel="stylesheet" href="style.css">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="header">
@@ -43,56 +46,37 @@
             <div class="article">
                 <h1>철학이란 무엇인가?</h1>
                 <hr>
-                <img src="src\images\art01.png" alt="작품1" >
-                <p>안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우</p>
+                <img src="src\images\athen.jpg" alt="작품1" >
+                <p>저도 잘 모른답니다.</p>
             </div>
 
             <div class="article">
-                <h1>몰라요</h1>
+                <h1>주요 연구 분야</h1>
                 <hr>
-                <p>안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
+                <p>
+                    <ul>
+                        <li>- AI 윤리</li>
+                        <li>- 응용윤리학</li>
+                        <li>- 실용주의철학</li>
+                        <li>- 존 듀이</li>
+                    </ul>
                 </p>
             </div>
             <div class="article">
-                <h1>정말 몰라요</h1>
+                <h1>학위 논문</h1>
                 <hr>
-                <p>안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
+                <p>
+                    - 인공적 도덕 행위자로서의 인공지능과 관계 기반 윤리적 판단 모델 (중앙대학교 인문대학 철학과 문학사) <br>
+                    - Launchpad with Sound Visualizer: Using Arduino and Processing (중앙대학교 창의ICT공과대학 융합공학부 디지털이미징 전공 공학사)
                 </p>
             </div>
+
             <div class="article">
-                <h1>아주 몰라요</h1>
+                <h1>참여 연구·사업·프로젝트</h1>
                 <hr>
-                <p>안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                </p>
-            </div>
-            <div class="article">
-                <h1>몰라몰라용</h1>
-                <hr>
-                <p>안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
+                <p>
+                    - 2021 국립국어원, '말뭉치 언어의 사회적 인식 조사·분류' <br>
+                    - 2021 캐나다아시아태평양재단(APFC)·한국인공지능윤리협회(KAIEA), 'AI Education Report for K-12 in Canada and South Korea'
                 </p>
             </div>
         </div>
