--- a/about.html
+++ b/about.html
@@ -6,7 +6,10 @@
     <title>AWESOME WEB - ABOUT</title>
 
     <link rel="stylesheet" href="style.css">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="header">
@@ -43,25 +46,78 @@
             <div class="article">
                 <h1>소개</h1>
                 <hr>
-                <img src="src\images\pengha.png" alt="작품1" >
-                <p>안녕하십니까 펭숩니다요. 남극에서 한국까지 온 펭귄입니다아~</p>
+                <img src="src\images\profile.jpg" alt="프로필 사진">
+                <p>안녕하세요, 이은재 입니다. <br> 서울에 살고있는 한 우물 못파는 사람입니다.</p>
             </div>
             <div class="article">
                 <h1>하고 싶은 일</h1>
                 <hr>
-                <p>놀고 싶습니다. 적극적으로 놀고 싶습니다.
+                <p>- 세상에 도움이 되기<br>
+                    - 선택과 집중을 하지 않기로 선택하고 집중하기 <br>
+                    
                 </p>
             </div>
             <div class="article">
                 <h1>할 수 있는 일</h1>
                 <hr>
-                <p>놀 수 있습니다. 항상 짜릿해. 늘 새로워.
+                <p>
+                    - 연구<br> <br>
+                    - 프로그래밍<br>
+
+                    &nbsp; &nbsp;&nbsp; &nbsp;- 웹 프론트엔드<br>
+                    &nbsp; &nbsp;&nbsp; &nbsp;- 자연어 처리<br>
+                    &nbsp; &nbsp;&nbsp; &nbsp;- 데이터 분석<br>
+                    &nbsp; &nbsp;&nbsp; &nbsp;- Unity 게임 개발<br>
+                    &nbsp; &nbsp;&nbsp; &nbsp;- Processing<br>
+                    &nbsp; &nbsp;&nbsp; &nbsp;- Arduino<br>
+                    &nbsp; &nbsp;&nbsp; &nbsp;- 머신러닝<br><br>
+                    - 악기 연주<br>
+                    &nbsp; &nbsp;&nbsp; &nbsp;- 우쿨렐레<br>
+                    &nbsp; &nbsp;&nbsp; &nbsp;- 카혼<br>
+                    &nbsp; &nbsp;&nbsp; &nbsp;- 블루스 하모니카<br>
+                    &nbsp; &nbsp;&nbsp; &nbsp;- 플룻<br>
+                    &nbsp; &nbsp;&nbsp; &nbsp;- 기타<br>
+                    &nbsp; &nbsp;&nbsp; &nbsp;- Launchpad<br>
+                    &nbsp; &nbsp;&nbsp; &nbsp;- Ableton Live 11<br><br>
+                    - 사진 촬영&편집<br>
+                    - 동영상 촬영&편집<br>
+                    - 그래픽 디자인<br>
+                    - 3D 모델링<br>
+                    - 3D 프린팅<br>
+                    - 클라이밍<br>
+                    - 베이킹<br>
+                    - 미트 프로세싱<br>
+                    
                 </p>
             </div>
             <div class="article">
                 <h1>하는 일</h1>
                 <hr>
-                <p>놀고 있습니다. 이왕 놀거 잘 놀고 있습니다.
+                <p>
+                    - 중앙대학교 대학원 철학과 서양철학 석사과정 재학<br>
+                    - 중앙대학교 인문콘텐츠연구소 연구원 재직<br>
+
+                </p>
+            </div>
+            <div class="article">
+                <h1>수상</h1>
+                <hr>
+                <p>
+                    - 2018 제1회 인공지능인문학 대학생 학술논문경연대회 장려상<br>
+                    - 2012 백마문화상 비평부문 대상 <br>
+                </p>
+            </div>
+            <div class="article">
+                <h1>활동</h1>
+                <hr>
+                <p>
+                    - 2020~ 4컷 웹툰 '어디에도 없는 만화' 연재중<br>
+                    - 2019~ Processing Reference 한국어 번역중<br>
+                    - 2017~ 비전공자 코딩 입문 스터디 운영중<br><br>
+                    - 2021 서울특별시 시민회의 시민위원<br>
+                    - 2021 생활코딩 머신러닝 이론편 베타테스터<br>
+                    - 2012~2016 페이스북 그룹 책벌레 신촌 운영<br>
+                    - 2009 십대들의 신문 기자<br>
                 </p>
             </div>
         </div>
