--- a/art.html
+++ b/art.html
@@ -55,50 +55,44 @@
             <div class="article">
                 <h1>DRAWING</h1>
                 <hr>
-                <p>안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
+                <p><p>▼ Hand Drawings <br>
+                    <img src="src\images\drawing01.jpg" alt="손그림1">
+                    <img src="src\images\drawing02.jpg" alt="손그림2">
+                    <img src="src\images\drawing03.jpg" alt="손그림3">
+                    <img src="src\images\drawing04.jpg" alt="손그림4">
+                </p>
                 </p>
             </div>
             <div class="article">
                 <h1>VIDEO</h1>
                 <hr>
-                <video controls preload="metadata"><source src="src\videos\Dschinghis Khan - Moskau (Live 1979).mp4"></video>
-                <p>안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
+                <p>▼ 7SEC (2019) <br> <br>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/PZVnCYhegqU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                
+                </p>
+                <p><br> ▼ 갤럭시 익스프레스 - 진짜 너를 원해 (Acoustic) (2018) <br> <br>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/rH8-5rCRn94" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                
+                </p>
+                <p><br> ▼ 씨없는 수박 김대중 (feat.박형) - 300/30 (2018) <br> <br>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/fOzxW-x2KtY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                
+                </p>
+                <p><br> ▼ 장기하 - 아기 염소 (2013) <br> <br>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/QawreRR0lYo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </p>
             </div>
             <div class="article">
                 <h1>MUSIC</h1>
                 <hr>
-                <p>안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
+                <p>▼ 공연 '오감도' (2019) <br>
+                    <img src="src\images\perform02.jpg" alt="공연사진1">
+                    <img src="src\images\perform03.jpg" alt="공연사진2">
+                    <img src="src\images\perform01.jpg" alt="공연사진3">
                 </p>
             </div>
             <div class="article">
                 <h1>ETC</h1>
                 <hr>
-                <p>안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
+                <p>                    
+                    <img src="src\images\torch01.png" alt="">
                 </p>
             </div>
         </div>
