--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300&display=swap" rel="stylesheet">
-</head>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet"></head>
 <body>
     <div class="header">
        
@@ -25,8 +25,6 @@
             <div class="button"><a href="./art.html">ART</a></div>
             <div class="button"><a href="./sport.html">SPORT</a></div>
             <div class="button"><a href="./contact.html">CONTACT</a></div>
-
-
         </div>
     </div>
     <div class="content-wrap">
@@ -42,8 +40,12 @@
             <div class="article">
                 <h1>CONTACT</h1>
                 <hr>
-                <img src="src\images\art01.png" alt="작품1" >
-                <p>안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우</p>
+                <p id="contact">
+                    <i class="far fa-envelope-open"></i>&nbsp; lpl2001@naver.com<br>
+                    <i class="fab fa-instagram"></i>&nbsp; ej_rarus<br>
+                    <i class="fas fa-laptop-house"></i>&nbsp;https://ej-rarus.github.io/
+
+                </p>
             </div>
         </div>
     </div>
