--- a/cs.html
+++ b/cs.html
@@ -47,56 +47,32 @@
             <div class="article">
                 <h1>PYTHON</h1>
                 <hr>
-                <img src="src\images\art01.png" alt="작품1" >
-                <p>안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우</p>
+                <p>PYTHON 교육자료</p>
             </div>
 
             <div class="article">
                 <h1>NLP</h1>
                 <hr>
-                <p>안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
+                <p>
                 </p>
             </div>
             <div class="article">
                 <h1>WEB</h1>
                 <hr>
-                <p>안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                </p>
+                <p>HTML / CSS / JAVASCRIPT 교육자료</p>
             </div>
             <div class="article">
                 <h1>Unity / C#</C></h1>
                 <hr>
-                <p>안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
+                <p>▼ Mobile VR GAME - 'La Mer' (2019) <br> <br>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/6hGVZGOFdEk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </p>
             </div>
             <div class="article">
                 <h1>PROCESSING 4</h1>
                 <hr>
-                <p>안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
+                <p>▼ Arduino LaunchPad with Processing Sound Visualizer (2019) <br> <br>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/ejOXtTidpFM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </p>
             </div>
         </div>
