--- a/philosophy.html
+++ b/philosophy.html
@@ -34,9 +34,9 @@
             <div class="left-menu-button-wrap">
                 <ul>
                     <li class="left-menu-button-top" style="font-size: 25px;">PHILOSOPHY</li>
-                    <li class="left-menu-button"><a href="#"></a></li>
-                    <li class="left-menu-button"><a href="#"></a></li>
-                    <li class="left-menu-button"><a href="#"></a></li>
+                    <li class="left-menu-button"><a href="#">주요 연구 분야</a></li>
+                    <li class="left-menu-button"><a href="#">학위논문</a></li>
+                    <li class="left-menu-button"><a href="#">참여 프로젝트</a></li>
                     <li class="left-menu-button"><a href="#"></a></li>
                 </ul>
             </div>
@@ -63,7 +63,7 @@
                 </p>
             </div>
             <div class="article">
-                <h1>학위 논문</h1>
+                <h1>학위논문</h1>
                 <hr>
                 <p>
                     - 인공적 도덕 행위자로서의 인공지능과 관계 기반 윤리적 판단 모델 (중앙대학교 인문대학 철학과 문학사) <br>
