--- a/sport.html
+++ b/sport.html
@@ -46,31 +46,29 @@
                 <h1>CLIMBING</h1>
                 <hr>
                 <img src="src\images\art01.png" alt="작품1" >
-                <p>안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우</p>
+                <p>&nbsp; &nbsp;&nbsp; &nbsp;- 주 활동 암장: 클라이밍파크 종로점<br></p>
             </div>
 
             <div class="article">
                 <h1>RUNNING</h1>
                 <hr>
-                <p>안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
+                <p>
+                    - 서울 둘레길 157K 완주 (2021)<br> <br>
+                    - 마라톤 완주<br>
+
+                    &nbsp; &nbsp;&nbsp; &nbsp;- 한강나이트워크 42K 완주 (2019)<br>
+                    &nbsp; &nbsp;&nbsp; &nbsp;- 브릿지워크 서울 20K 완주 (2019)<br>
+                    &nbsp; &nbsp;&nbsp; &nbsp;- 119런 완주 (2018)<br>
+                    &nbsp; &nbsp;&nbsp; &nbsp;- JTBC 서울 마라톤 10K 완주 (2018)<br>
+                    &nbsp; &nbsp;&nbsp; &nbsp;- 한강나이트워크 15K 완주 (2017)<br>
+                    &nbsp; &nbsp;&nbsp; &nbsp;- GO SEOUL JTBC NIKE CITYRACE 10K 완주 (2018)<br>
+                    &nbsp; &nbsp;&nbsp; &nbsp;- 그 외 다수<br><br>
                 </p>
             </div>
             <div class="article">
                 <h1>ETC</h1>
                 <hr>
-                <p>안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
-                    안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우
+                <p>
                 </p>
             </div>
         </div>
