--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
             <div class="article">
                 <h1>소개</h1>
                 <hr>
-                <img src="src\images\profile.jpg" alt="프로필 사진">
+                <img id="profile" src="src\images\profile.jpg" alt="프로필 사진">
                 <p>안녕하세요, 이은재 입니다. <br> 서울에 살고있는 한 우물 못파는 사람입니다.</p>
             </div>
             <div class="article">
