반응형 추가중

--- a/index.html
+++ b/index.html
@@ -19,14 +19,21 @@
     <div class="nav">
         <div class="logo"><a href="./index.html">EUN JAE LEE</a></div>
         <div class="button-wrap">
+            <!-- 데스크탑 & 태블릿 -->
             <div class="button"><a href="./about.html">ABOUT</a></div>
             <div class="button"><a href="./philosophy.html">PHILOSOPHY</a></div>
             <div class="button"><a href="./cs.html">COMPUTER SCIENCE</a></div>
             <div class="button"><a href="./art.html">ART</a></div>
             <div class="button"><a href="./sport.html">SPORT</a></div>
             <div class="button"><a href="./contact.html">CONTACT</a></div>
-
-
+            
+            <!-- 모바일 -->
+            <div class="mo-button"><a href="./about.html"></a></div>
+            <div class="mo-button"><a href="./philosophy.html"></a></div>
+            <div class="mo-button"><a href="./cs.html"></a></div>
+            <div class="mo-button"><a href="./art.html"></a></div>
+            <div class="mo-button"><a href="./sport.html"></a></div>
+            <div class="mo-button"><a href="./contact.html"></a></div>
         </div>
     </div>
     
@@ -41,12 +48,12 @@
         </br>
         </br>
         </br>
-        <h1 style="font-size: 7rem;">WELCOME!</h1>
+        <h1 id="greeting">WELCOME!</h1>
         </br>
         </br>
         </br>
         </br>
-        <img src="src\images\pixel_art.png" alt="어서와요">
+        <img id="pixel-welcome" src="src\images\pixel_art.png" alt="어서와요">
     </div>
 
 
