--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/d878e2d7c4.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="header">
@@ -28,12 +29,12 @@
             <div class="button"><a href="./contact.html">CONTACT</a></div>
             
             <!-- 모바일 -->
-            <div class="mo-button"><a href="./about.html"></a></div>
-            <div class="mo-button"><a href="./philosophy.html"></a></div>
-            <div class="mo-button"><a href="./cs.html"></a></div>
-            <div class="mo-button"><a href="./art.html"></a></div>
-            <div class="mo-button"><a href="./sport.html"></a></div>
-            <div class="mo-button"><a href="./contact.html"></a></div>
+            <div class="mo-button"><a href="./about.html"><i class="fa-solid fa-message fa-1x"></i></a></div>
+            <div class="mo-button"><a href="./philosophy.html"><i class="fa-solid fa-graduation-cap fa-1x"></i></a></div>
+            <div class="mo-button"><a href="./cs.html"><i class="fa-solid fa-code fa-1x"></i></a></div>
+            <div class="mo-button"><a href="./art.html"><i class="fa-solid fa-palette fa-1x"></i></a></div>
+            <div class="mo-button"><a href="./sport.html"><i class="fa-solid fa-person-running fa-1x"></i></a></div>
+            <div class="mo-button"><a href="./contact.html"><i class="fa-solid fa-envelope fa-1x"></i></a></div>
         </div>
     </div>
     
@@ -58,6 +59,5 @@
 
 
 </body>
-<script src="script.js"></script>
 
 </html>
