--- a/philosophy.html
+++ b/philosophy.html
@@ -84,6 +84,9 @@
                 <h1>참여 연구·사업·프로젝트</h1>
                 <hr>
                 <p>
+                    <a href="https://www.kci.go.kr/kciportal/ci/sereArticleSearch/ciSereArtiView.kci?sereArticleSearchBean.artiId=ART002810155" style="color: black;">- 2022 심지원, 이은재, 김문정 "인간의 윤리로서 인공지능윤리 -인공지능윤리의 가치와 자리-" 철학∙사상∙문화 38 pp.46-64 (2022) : 46. <br>
+
+                    </a>
                     - 2021 국립국어원, '말뭉치 언어의 사회적 인식 조사·분류' <br>
                     - 2021 캐나다아시아태평양재단(APFC)·한국인공지능윤리협회(KAIEA), 'AI Education Report for K-12 in Canada and South Korea'
                 </p>
