--- a/about.html
+++ b/about.html
@@ -56,46 +56,48 @@
                 <h1>소개</h1>
                 <hr>
                 <img id="profile" src="src\images\profile.jpg" alt="프로필 사진">
-                <p>안녕하세요, 이은재 입니다. <br> 서울에 살고있는 한 우물 못파는 사람입니다.</p>
+                <p> <span>안녕하세요, 이은재 입니다.</span>
+                    <span>서울에 살고있는 한 우물 못파는 사람입니다.</span>
+                </p>
             </div>
             <div class="article">
                 <h1>하고 싶은 일</h1>
                 <hr>
-                <p>- 세상에 도움이 되기<br>
-                    - 선택과 집중을 하지 않기로 선택하고 집중하기 <br>
-                    
+                <p>
+                    <span> - 세상에 도움이 되기</span>
+                    <span> - 선택과 집중을 하지 않기로 선택하고 집중하기</span>                    
                 </p>
             </div>
             <div class="article">
                 <h1>할 수 있는 일</h1>
                 <hr>
                 <p>
-                    - 연구<br> <br>
-                    - 프로그래밍<br>
+                    <span> - 연구</span><br>
+                    <span> - 프로그래밍</span>
+                    <span>&nbsp; &nbsp;&nbsp; &nbsp;- 웹 프론트엔드</span>
+                    <span>&nbsp; &nbsp;&nbsp; &nbsp;- 자연어 처리</span>
+                    <span>&nbsp; &nbsp;&nbsp; &nbsp;- 데이터 분석</span>
+                    <span>&nbsp; &nbsp;&nbsp; &nbsp;- Unity 게임 개발</span>
+                    <span>&nbsp; &nbsp;&nbsp; &nbsp;- Processing</span>
+                    <span>&nbsp; &nbsp;&nbsp; &nbsp;- Arduino</span>
+                    <span>&nbsp; &nbsp;&nbsp; &nbsp;- 머신러닝</span><br>
+                    <span> - 악기 연주</span>
+                    <span>&nbsp; &nbsp;&nbsp; &nbsp;- 우쿨렐레</span>
+                    <span>&nbsp; &nbsp;&nbsp; &nbsp;- 카혼</span>
+                    <span>&nbsp; &nbsp;&nbsp; &nbsp;- 블루스 하모니카</span>
+                    <span>&nbsp; &nbsp;&nbsp; &nbsp;- 플룻</span>
+                    <span>&nbsp; &nbsp;&nbsp; &nbsp;- 기타</span>
+                    <span>&nbsp; &nbsp;&nbsp; &nbsp;- Launchpad</span>
+                    <span>&nbsp; &nbsp;&nbsp; &nbsp;- Ableton Live 11</span><br>
 
-                    &nbsp; &nbsp;&nbsp; &nbsp;- 웹 프론트엔드<br>
-                    &nbsp; &nbsp;&nbsp; &nbsp;- 자연어 처리<br>
-                    &nbsp; &nbsp;&nbsp; &nbsp;- 데이터 분석<br>
-                    &nbsp; &nbsp;&nbsp; &nbsp;- Unity 게임 개발<br>
-                    &nbsp; &nbsp;&nbsp; &nbsp;- Processing<br>
-                    &nbsp; &nbsp;&nbsp; &nbsp;- Arduino<br>
-                    &nbsp; &nbsp;&nbsp; &nbsp;- 머신러닝<br><br>
-                    - 악기 연주<br>
-                    &nbsp; &nbsp;&nbsp; &nbsp;- 우쿨렐레<br>
-                    &nbsp; &nbsp;&nbsp; &nbsp;- 카혼<br>
-                    &nbsp; &nbsp;&nbsp; &nbsp;- 블루스 하모니카<br>
-                    &nbsp; &nbsp;&nbsp; &nbsp;- 플룻<br>
-                    &nbsp; &nbsp;&nbsp; &nbsp;- 기타<br>
-                    &nbsp; &nbsp;&nbsp; &nbsp;- Launchpad<br>
-                    &nbsp; &nbsp;&nbsp; &nbsp;- Ableton Live 11<br><br>
-                    - 사진 촬영&편집<br>
-                    - 동영상 촬영&편집<br>
-                    - 그래픽 디자인<br>
-                    - 3D 모델링<br>
-                    - 3D 프린팅<br>
-                    - 클라이밍<br>
-                    - 베이킹<br>
-                    - 미트 프로세싱<br>
+                    <span>- 사진 촬영&편집 </span>
+                    <span>- 동영상 촬영&편집 </span>
+                    <span>- 그래픽 디자인 </span>
+                    <span>- 3D 모델링 </span>
+                    <span>- 3D 프린팅 </span>
+                    <span>- 클라이밍 </span>
+                    <span>- 베이킹 </span>
+                    <span>- 미트 프로세싱 </span>
                     
                 </p>
             </div>
@@ -103,8 +105,8 @@
                 <h1>하는 일</h1>
                 <hr>
                 <p>
-                    - 중앙대학교 대학원 철학과 서양철학 석사과정 재학<br>
-                    - 중앙대학교 인문콘텐츠연구소 연구원 재직<br>
+                   <span> - 중앙대학교 대학원 철학과 서양철학 석사과정 재학</span>
+                   <span> - 중앙대학교 인문콘텐츠연구소 연구원 재직</span>
 
                 </p>
             </div>
@@ -112,21 +114,21 @@
                 <h1>수상</h1>
                 <hr>
                 <p>
-                    - 2018 제1회 인공지능인문학 대학생 학술논문경연대회 장려상<br>
-                    - 2012 백마문화상 비평부문 대상 <br>
+                   <span> - 2018 제1회 인공지능인문학 대학생 학술논문경연대회 장려상</span>                   
+                   <span> - 2012 백마문화상 비평부문 대상</span>
                 </p>
             </div>
             <div class="article">
                 <h1>활동</h1>
                 <hr>
                 <p>
-                    - 2020~ 4컷 웹툰 '어디에도 없는 만화' 연재중<br>
-                    - 2019~ Processing Reference 한국어 번역중<br>
-                    - 2017~ 비전공자 코딩 입문 스터디 운영중<br><br>
-                    - 2021 서울특별시 시민회의 시민위원<br>
-                    - 2021 생활코딩 머신러닝 이론편 베타테스터<br>
-                    - 2012~2016 페이스북 그룹 책벌레 신촌 운영<br>
-                    - 2009 십대들의 신문 기자<br>
+                   <span> - 2020~ 4컷 웹툰 '어디에도 없는 만화' 연재중</span>
+                   <span> - 2019~ Processing Reference 한국어 번역중</span>
+                   <span> - 2017~ 비전공자 코딩 입문 스터디 운영중</span>
+                   <span> - 2021 서울특별시 시민회의 시민위원</span>
+                   <span> - 2021 생활코딩 머신러닝 이론편 베타테스터</span>
+                   <span> - 2012~2016 페이스북 그룹 책벌레 신촌 운영</span>
+                   <span> - 2009 십대들의 신문 기자</span>
                 </p>
             </div>
         </div>
