--- a/philosophy.html
+++ b/philosophy.html
@@ -62,21 +62,19 @@
             <div class="article">
                 <h1>주요 연구 분야</h1>
                 <hr>
-                <p>
-                    <ul>
-                        <li>- AI 윤리</li>
-                        <li>- 응용윤리학</li>
-                        <li>- 실용주의철학</li>
-                        <li>- 존 듀이</li>
-                    </ul>
+                <p class="field-of-study">
+                    <span>- AI 윤리 </span>
+                    <span>- 응용윤리학</span>
+                    <span>- 실용주의철학</span>
+                    <span>- 존 듀이</span>
                 </p>
             </div>
             <div class="article">
                 <h1>학위논문</h1>
                 <hr>
                 <p>
-                    - 인공적 도덕 행위자로서의 인공지능과 관계 기반 윤리적 판단 모델 (중앙대학교 인문대학 철학과 문학사) <br>
-                    - Launchpad with Sound Visualizer: Using Arduino and Processing (중앙대학교 창의ICT공과대학 융합공학부 디지털이미징 전공 공학사)
+                    <span> - 인공적 도덕 행위자로서의 인공지능과 관계 기반 윤리적 판단 모델 (중앙대학교 인문대학 철학과 문학사)</span>
+                    <span> - Launchpad with Sound Visualizer: Using Arduino and Processing (중앙대학교 창의ICT공과대학 융합공학부 디지털이미징 전공 공학사)</span>
                 </p>
             </div>
 
@@ -84,11 +82,11 @@
                 <h1>참여 연구·사업·프로젝트</h1>
                 <hr>
                 <p>
-                    <a href="https://www.kci.go.kr/kciportal/ci/sereArticleSearch/ciSereArtiView.kci?sereArticleSearchBean.artiId=ART002810155" style="color: black;">- 2022 심지원, 이은재, 김문정 "인간의 윤리로서 인공지능윤리 -인공지능윤리의 가치와 자리-" 철학∙사상∙문화 38 pp.46-64 (2022) : 46. <br>
+                    <a href="https://www.kci.go.kr/kciportal/ci/sereArticleSearch/ciSereArtiView.kci?sereArticleSearchBean.artiId=ART002810155" style="color: black;"> <span> - 2022 심지원, 이은재, 김문정 "인간의 윤리로서 인공지능윤리 -인공지능윤리의 가치와 자리-" 철학∙사상∙문화 38 pp.46-64 (2022) : 46. </span>
 
                     </a>
-                    - 2021 국립국어원, '말뭉치 언어의 사회적 인식 조사·분류' <br>
-                    - 2021 캐나다아시아태평양재단(APFC)·한국인공지능윤리협회(KAIEA), 'AI Education Report for K-12 in Canada and South Korea'
+                    <span>- 2021 국립국어원, '말뭉치 언어의 사회적 인식 조사·분류'</span> 
+                    <span> - 2021 캐나다아시아태평양재단(APFC)·한국인공지능윤리협회(KAIEA), 'AI Education Report for K-12 in Canada and South Korea'</span>
                 </p>
             </div>
         </div>
