commit responsive web

--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300&display=swap" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet"></head>
     <script src="https://kit.fontawesome.com/d878e2d7c4.js" crossorigin="anonymous"></script>
 
 <body>
@@ -52,16 +51,16 @@
                 <h1>CONTACT</h1>
                 <hr>
                 <p id="contact">
-                    <i class="far fa-envelope-open"></i>&nbsp; lpl2001@naver.com<br>
-                    <i class="fab fa-instagram"></i>&nbsp; ej_rarus<br>
-                    <i class="fas fa-laptop-house"></i>&nbsp;https://ej-rarus.github.io/
-
+                    <ul>
+                        <li><span><i class="fa-solid fa-envelope"></i> lpl2001@naver.com</span></li>
+                        <li><span><i class="fa-brands fa-instagram-square"></i> @ej_rarus</span></li>
+                        <li><span><i class="fa-solid fa-house-chimney"></i> ej-rarus.github.io</span></li>
+                    </ul>                   
                 </p>
             </div>
         </div>
     </div>
 
 </body>
-<script src="script.js"></script>
 
 </html>
