--- a/art.html
+++ b/art.html
@@ -58,18 +58,17 @@
                 <h1>PHOTO</h1>
                 <hr>
                 <img src="src\images\art01.png" alt="작품1" >
-                <p>안녕하십니까 저는 접니다. 반가워요 여러분 뀨우우우우우</p>
+                <p></p>
             </div>
 
             <div class="article">
                 <h1>DRAWING</h1>
                 <hr>
-                <p><p>▼ Hand Drawings <br>
+                <p>▼ Hand Drawings <br>
                     <img src="src\images\drawing01.jpg" alt="손그림1">
                     <img src="src\images\drawing02.jpg" alt="손그림2">
-                    <img src="src\images\drawing03.jpg" alt="손그림3">
-                    <img src="src\images\drawing04.jpg" alt="손그림4">
-                </p>
+                    <img src="src\images\drawing04.jpg" alt="손그림3">
+                    <img src="src\images\drawing03.jpg" alt="손그림4">
                 </p>
             </div>
             <div class="article">
