--- a/philosophy.html
+++ b/philosophy.html
@@ -3,6 +3,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="src\images\pixel_art.png"> <!-- 카카오톡 미리보기 썸네일 -->
+    <meta property="og:title" content="Eunjae Tony Lee 이은재"> <!-- 카카오톡 미리보기 제목 -->
+    <meta property="og:description" content="Philosopher & Software Developer"> <!-- 카카오톡 미리보기 설명 -->
+    <meta property="og:url" content="https://ej-rarus.github.io/"> <!-- 카카오톡 미리보기 URL -->
     <title>AWESOME WEB - PHILOSOPHY</title>
 
     <link rel="stylesheet" href="style.css">
