--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="https://github.com/ej-rarus/ej-rarus.github.io/blob/main/src/images/pixel_art.png?raw=true"> <!-- 카카오톡 미리보기 썸네일 -->
+    <meta property="og:image" content="https://raw.githubusercontent.com/ej-rarus/ej-rarus.github.io/main/src/images/pixel_art.png"> <!-- 카카오톡 미리보기 썸네일 -->
     <meta property="og:title" content="Eunjae Tony Lee 이은재"> <!-- 카카오톡 미리보기 제목 -->
     <meta property="og:description" content="Philosopher & Software Developer"> <!-- 카카오톡 미리보기 설명 -->
     <meta property="og:url" content="https://ej-rarus.github.io/"> <!-- 카카오톡 미리보기 URL -->
